# PsBattleBrowser

./: README.md  main.py  pyproject.toml
lib/: download.py  extract.py  filters.py  html.py  imgur.py  reddit.py
models/: battle.py  comment.py  index.py
static/: style.css
templates/: entry.html  index.html
